--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-camera": "~16.1.6",
     "expo-status-bar": "~2.2.3",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-calendars": "^1.1312.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-screens": "~4.10.0",
+    "react-native-slider-button": "^0.1.1",
+    "react-native-swipe-button": "^0.0.4",
+    "rn-slide-button": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
