--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-camera": "~16.1.6",
@@ -25,9 +27,12 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-slider-button": "^0.1.1",
+    "react-native-slide-to-unlock": "^0.1.8",
     "react-native-swipe-button": "^0.0.4",
-    "rn-slide-button": "^1.0.3"
+    "rn-slide-button": "^1.0.3",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
